--- a/src/App.css
+++ b/src/App.css
@@ -39,45 +39,16 @@
 /* /////////////////////////////////////////////// */
 /* /////////////////////  start ////////////////// */
 /* //////////////////////////////////////////////// */
-.button {
-  background: rgb(131, 5, 189);
-  outline: none;
-  border: none;
-  padding: 10px;
-  border-radius: 4px;
-  font-weight: 300;
-  letter-spacing: 2px;
-  cursor: pointer;
-  color: white;
-}
+
 .startBox {
   color: white;
-  height: 100%;
+  /* height: 100%; */
   display: flex;
   align-items: center;
   justify-content: center;
   text-align: center;
 }
-.startButton {
-  background: rgb(131, 5, 189);
-  outline: none;
-  border: none;
-  padding: 10px;
-  border-radius: 4px;
-  font-weight: 300;
-  letter-spacing: 2px;
-  cursor: pointer;
-  color: white;
-}
-.timeInput {
-  outline: none;
-  border: none;
-  width: 40px;
-  height: 40px;
-  margin-bottom: 20px;
-  margin-left: 10px;
-  text-align: center;
-}
+
 .timeInput::-webkit-inner-spin-button,
 .timeInput::-webkit-outer-spin-button {
   -webkit-appearance: none;
@@ -154,82 +125,4 @@
 }
 .nextBtn {
   float: right;
-}
-/* /////////////////////////////////////////////// */
-/* /////////////////////  end ////////////////// */
-/* //////////////////////////////////////////////// */
-.endBox {
-  align-items: center;
-  text-align: center;
-  color: white;
-}
-.trophy {
-  height: 50px;
-}
-
-/* /////////////////////////////////////////////// */
-/* /////////////////////  modal ////////////////// */
-/* //////////////////////////////////////////////// */
-.modal {
-  position: absolute;
-  top: 0;
-  left: 0;
-  width: 100%;
-  height: 100%;
-  background: rgba(0, 0, 0, 0.6);
-}
-
-.modal-main {
-  position: absolute;
-  border-radius: 10px;
-  padding: 10px;
-  background: white;
-  color: black;
-  width: 50%;
-  height: 80%;
-  top: 50%;
-  left: 50%;
-  transform: translate(-50%, -50%);
-  overflow: auto;
-}
-
-.display-block {
-  display: block;
-}
-
-.display-none {
-  display: none;
-}
-.modalBody {
-  text-align: left;
-}
-.modalBody header {
-  display: flex;
-  justify-content: space-between;
-  font-size: 20px;
-  padding: 10px;
-}
-.bg-success {
-  background: #48c774;
-  color: white;
-  padding: 10px;
-  width: 90%;
-  font-size: 13px;
-  font-weight: 500;
-}
-.bg-warning {
-  background: #3273dc;
-  color: white;
-  padding: 10px;
-  width: 90%;
-  font-size: 13px;
-  font-weight: 300;
-}
-.bg-danger {
-  background: #f14668;
-  color: white;
-  padding: 10px;
-  width: 90%;
-  font-size: 13px;
-  font-weight: 500;
 }
